Fix 1.16 build